    [package]
name = "PacketTerror"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.30.0"
bevy_common_assets = { version = "0.12.0", features = ["json"] }
bevy_picking = "0.15.3"
serde = "1.0.219"
serde_json = "1.0.140"
